a little bit of everything
